--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-navigation": "^3.0.2"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "babel-jest": "23.6.0",
+    "eslint": "^5.9.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-native": "^3.5.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.49.2",
     "react-test-renderer": "16.6.1"
