--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-gesture-handler": "^1.0.10",
+    "react-native-map": "0.0.1",
+    "react-native-maps": "^0.22.1",
     "react-native-star-rating": "^1.1.0",
     "react-navigation": "^3.0.2"
   },
